--- a/react-vite-tailwind/package.json
+++ b/react-vite-tailwind/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
+    "element-plus": "^2.11.1",
+    "element-react": "^1.4.34",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
