--- a/react-vite-tailwind/package.json
+++ b/react-vite-tailwind/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/cli": "^4.1.12",
     "element-plus": "^2.11.1",
     "element-react": "^1.4.34",
+    "preline": "^3.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
